Добавление верстки для продуктов и подтверждения заказа

--- a/Pages/Account/Authorization/Register-confirm.razor
+++ b/Pages/Account/Authorization/Register-confirm.razor
@@ -1,6 +1,4 @@
-﻿@page "/register-confirm"
-
-<section class="register-confirm">
+﻿<section class="register-confirm">
     <div class="register-confirm__container">
         <div class="register-confirm__block">
             <img class="register-confirm__image" src="./icons/register-confirm/Mail.svg" alt="Иконка почты">
