--- a/Pages/Account/Authorization/Register-successfully.razor
+++ b/Pages/Account/Authorization/Register-successfully.razor
@@ -1,6 +1,4 @@
-﻿@page "/register-successfully"
-
-<section class="register-successfully">
+﻿<section class="register-successfully">
     <div class="register-successfully__container">
         <div class="register-successfully__block">
             <img class="register-successfully__image" src="/icons/register-successfully/Mail.svg" alt="Иконка почты">
