Создание страницы AccessDenied

--- a/Pages/Shared/AccessDenied.razor
+++ b/Pages/Shared/AccessDenied.razor
@@ -1,1 +1,8 @@
-﻿<span>У вас нет доступа к этому ресурсу</span>
+﻿<section class="access-denied">
+    <div class="access-denied__container">
+        <div class="access-denied__block">
+            <img class="access-denied__image" src="/icons/accessDenied/access-denied-icon.svg" alt="Иконка отсутствия доступа">
+            <h1 class="access-denied__disclaimer">Увы по данному запросу у вас нет доступа <br> Приносим свои извинения за неудобства если вы попали сюда случайно по нашей вине</h1>
+        </div>
+    </div>
+</section>
