Заменение индификаторов у сущностей товаров с guid на тип string, указание маршрутов то типизированных страничек

--- a/Pages/Shared/AccessDenied.razor
+++ b/Pages/Shared/AccessDenied.razor
@@ -1,4 +1,7 @@
-﻿<section class="access-denied">
+﻿@page "/access-denied"
+@attribute [AllowAnonymous]
+
+<section class="access-denied">
     <div class="access-denied__container">
         <div class="access-denied__block">
             <img class="access-denied__image" src="/icons/accessDenied/access-denied-icon.svg" alt="Иконка отсутствия доступа">
