--- a/Pages/Shared/Notfound.razor
+++ b/Pages/Shared/Notfound.razor
@@ -1,4 +1,7 @@
-﻿<section class="notfound">
+﻿@page "/not-found"
+@attribute [AllowAnonymous]
+
+<section class="notfound">
     <div class="notfound__container">
         <div class="notfound__block">
             <h1 class="notfound__http-error">404</h1>
