--- a/Pages/Shared/Technical-works.razor
+++ b/Pages/Shared/Technical-works.razor
@@ -1,4 +1,7 @@
-﻿<section class="technical-works">
+﻿@page "/technical-works"
+@attribute [AllowAnonymous]
+
+<section class="technical-works">
     <div class="technical-works__container">
         <div class="technical-works__block">
             <img class="technical-works__image" src="./icons/technical-works/Tools.svg" alt="Иконка инструментов">
